lib/kestrel-test-suite/testdata/memory_model/negative_conformance/struct_with_not_copyable_and_protocol.ks
// test: diagnostics
// stdlib: false

module Test

@builtin(.Copyable)
protocol Copyable {}

protocol Resource {}

struct Handle: not Copyable, Resource {}
